passei a logica dos sinais para o host

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
 		"protocol.h": "c",
 		"fcntl.h": "c",
 		"signal.h": "c",
-		"io.h": "c"
+		"io.h": "c",
+		"stdio.h": "c",
+		"string.h": "c"
 	}
 }
